Add SEO meta tags and site files for ClovaLink
Enhanced index.html with SEO, Open Graph, and Twitter meta tags for better discoverability. Added robots.txt and sitemap.xml for search engine indexing. Updated .gitignore for security and temp files. Created index.html.bak as a backup.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ClovaLink</title>
+  <title>ClovaLink - Enterprise File Management</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Multi-tenant file management and compliance platform built with Rust and React without the enterprise price tag. Self-host it. Own your data.">
+  <meta name="keywords"
+    content="file management, enterprise storage, compliance, rust, react, hipaa, sox, gdpr, multi-tenant, self-hosted">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://clovalink.org/">
+  <meta property="og:title" content="ClovaLink - Enterprise File Management">
+  <meta property="og:description"
+    content="Multi-tenant file management and compliance platform built with Rust and React. Stop paying per-user fees.">
+  <meta property="og:image" content="https://clovalink.org/logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://clovalink.org/">
+  <meta property="twitter:title" content="ClovaLink - Enterprise File Management">
+  <meta property="twitter:description"
+    content="Multi-tenant file management and compliance platform built with Rust and React. Stop paying per-user fees.">
+  <meta property="twitter:image" content="https://clovalink.org/logo.png">
 </head>
 
 <body>
